fixing some bugs and typos

--- a/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/sechub-config-integrator.json
+++ b/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/sechub-config-integrator.json
@@ -18,5 +18,9 @@
     {
     "ParameterKey": "RoleToAssume",
     "ParameterValue": {{ RoleToAssume }}
+    },
+    {
+      "ParameterKey": "AggregatorAccount",
+      "ParameterValue": {{ SecurityAccountId }}
     }
 ]
