made changes to the policy document for assume role

--- a/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/enable-config-aggregator.json
+++ b/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/enable-config-aggregator.json
@@ -2,5 +2,13 @@
     {
       "ParameterKey": "AggregatorAccount",
       "ParameterValue": {{ SecurityAccountId }}
+    },
+    {
+      "ParameterKey": "OrganizationId",
+      "ParameterValue": {{ OrganizationId }}
+    },
+    {
+      "ParameterKey": "RoleToAssume",
+      "ParameterValue": {{ RoleToAssume }}
     }
 ]
