--- a/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/user-input.yaml
+++ b/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/user-input.yaml
@@ -14,3 +14,5 @@ input_parameters:
   - file_name: parameters/core_accounts/enable-config-aggregator.json
     parameters:
       SecurityAccountId: "$[alfred_ssm_/org/member/security/account_id]"
+      OrganizationId: "$[alfred_ssm_/org/primary/organization_id]"
+      RoleToAssume: AWSCloudFormationStackSetExecutionRole
