changed aggregator to run-enabled in master

--- a/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/enable-config-aggregator.json
+++ b/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/enable-config-aggregator.json
@@ -1,7 +1,7 @@
 [
     {
       "ParameterKey": "AggregatorAccount",
-      "ParameterValue": {{ SecurityAccountId }}
+      "ParameterValue": {{ AggregatorAccountId }}
     },
     {
       "ParameterKey": "OrganizationId",
