--- a/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/user-input.yaml
+++ b/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/user-input.yaml
@@ -2,7 +2,7 @@ input_parameters:
   - file_name: add_on_manifest.yaml 
     parameters: 
       core_ou: core 
-      core_account: security 
+      core_account: primary 
       avm_products: ['AWS-Landing-Zone-Account-Vending-Machine']
   - file_name: parameters/core_accounts/sechub-config-integrator.json
     parameters:
@@ -13,6 +13,6 @@ input_parameters:
       RoleToAssume: AWSCloudFormationStackSetExecutionRole
   - file_name: parameters/core_accounts/enable-config-aggregator.json
     parameters:
-      SecurityAccountId: "$[alfred_ssm_/org/member/security/account_id]"
+      AggregatorAccountId: "$[alfred_ssm_/org/primary/account_id]"
       OrganizationId: "$[alfred_ssm_/org/primary/organization_id]"
       RoleToAssume: AWSCloudFormationStackSetExecutionRole
