--- a/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/templates/core_accounts/enable-config-aggregator.template
+++ b/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/templates/core_accounts/enable-config-aggregator.template
@@ -62,12 +62,6 @@ Resources:
               StringEquals:
                 "aws:PrincipalOrgId": !Ref OrganizationId
 
-  AggregationAuthorization:
-    Type: AWS::Config::AggregationAuthorization
-    Properties:
-      AuthorizedAccountId: !Ref AggregatorAccount
-      AuthorizedAwsRegion: !Ref AggregatorRegion
-
   ConfigurationAggregator:
     Type: AWS::Config::ConfigurationAggregator
     Properties:
@@ -77,4 +71,4 @@ Resources:
            - ConfigAggregatorRole
            - Arn
         AllAwsRegions: true
-      ConfigurationAggregatorName: NQTechAggregator
+      ConfigurationAggregatorName: NQTechAggregator1
