set up in master account

--- a/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/sechub-config-integrator.json
+++ b/aws-landing-zone-configuration/add-on/SecHub-ConfigIntegration-LZ-AddOn/parameters/core_accounts/sechub-config-integrator.json
@@ -1,7 +1,7 @@
 [
     {
-      "ParameterKey": "SecurityAccountId",
-      "ParameterValue": {{ SecurityAccountId }}
+      "ParameterKey": "MasterAccountId",
+      "ParameterValue": {{ MasterAccountId }}
     },
     {
       "ParameterKey": "OrganizationId",
