Shared s3 bucket and Major refactoring

--- a/aws-landing-zone-configuration/manifest.yaml
+++ b/aws-landing-zone-configuration/manifest.yaml
@@ -144,7 +144,14 @@ organizational_units:
           # SSM parameter to hold the Organization ID
           - name: /org/primary/organization_id
             value: $[OrganizationId]
-        core_resources: []
+        core_resources:
+          - name: SharedBucketMaster
+            template_file: templates/aws_baseline/aws-landing-zone-shared-bucket.template
+            parameter_file: parameters/aws_baseline/aws-landing-zone-shared-bucket.json
+            deploy_method: stack_set
+            ssm_parameters:
+              - name: /org/primary/bucket_name # This key will always be created in region mentioned at the top of the Manifest file.
+                value: $[output_BucketName]
   - name: applications
     include_in_baseline_products:
       - AWS-Landing-Zone-Account-Vending-Machine
@@ -304,3 +311,4 @@ baseline_resources:
     parameter_file: parameters/aws_baseline/aws-landing-zone-primary-vpc.json
     deploy_method: stack_set
     parameter_override: true
+  
