--- a/enable-aggregator-LZ-AddOn/templates/core_accounts/enable-config-aggregator.template
+++ b/enable-aggregator-LZ-AddOn/templates/core_accounts/enable-config-aggregator.template
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: Enable config aggregator for organization in the master account. 
+Description: Enable config aggregator for organization in the security account. 
 
 Resources:
   ConfigAggregatorRole:
