--- a/sechub-config-integeration-LZ-AddOn/parameters/core_accounts/sechub-config-integration.json
+++ b/sechub-config-integeration-LZ-AddOn/parameters/core_accounts/sechub-config-integration.json
@@ -1,7 +1,7 @@
 [
     {
-      "ParameterKey": "MasterAccountId",
-      "ParameterValue": {{ MasterAccountId }}
+      "ParameterKey": "SecurityAccountId",
+      "ParameterValue": {{ SecurityAccountId }}
     },
     {
       "ParameterKey": "OrganizationId",
