--- a/enable-aggregator-LZ-AddOn/user-input.yaml
+++ b/enable-aggregator-LZ-AddOn/user-input.yaml
@@ -2,6 +2,7 @@ input_parameters:
   - file_name: add_on_manifest.yaml 
     parameters: 
       core_ou: core 
-      core_account: primary 
+      core_account: master 
+      email_id: info@nqtech.ca
       avm_products: ['AWS-Landing-Zone-Account-Vending-Machine']
 
