--- a/aws-landing-zone-configuration/manifest.yaml
+++ b/aws-landing-zone-configuration/manifest.yaml
@@ -132,6 +132,13 @@ organizational_units:
                 value: $[output_PublicSubnet2ID]
               - name: /org/member/sharedservices/vpc_private_route_ids
                 value: $[output_PrivateSubnetRouteTables]
+          - name: SharedBucketMaster
+            template_file: templates/aws_baseline/aws-landing-zone-shared-bucket.template
+            parameter_file: parameters/aws_baseline/aws-landing-zone-shared-bucket.json
+            deploy_method: stack_set
+            ssm_parameters:
+              - name: /org/member/sharedservice/bucket_name # This key will always be created in region mentioned at the top of the Manifest file.
+                value: $[output_BucketName]
       # Organization's Master account
       - name: primary  # NOTE: DO NOT MODIFY THIS ACCOUNT NAME AND IT SHOULD BE THE LAST CORE ACCOUNT IN THE LIST
         ssm_parameters:
@@ -311,4 +318,11 @@ baseline_resources:
     parameter_file: parameters/aws_baseline/aws-landing-zone-primary-vpc.json
     deploy_method: stack_set
     parameter_override: true
+
+  - name: EnableConfigSecHubIntegration
+    baseline_products:
+      - AWS-Landing-Zone-Account-Vending-Machine
+    template_file: templates/aws_baseline/aws-lz-sechub-config-integration.template
+    parameter_file: parameters/aws_baseline/aws-lz-sechub-config-integration.json
+    deploy_method: stack_set
   
