--- a/SecurityHub-Enabler-LZ-AddOn/user-input.yaml
+++ b/SecurityHub-Enabler-LZ-AddOn/user-input.yaml
@@ -2,7 +2,7 @@ input_parameters:
   - file_name: add_on_manifest.yaml 
     parameters: 
       core_ou: core 
-      core_account: master 
+      core_account: security 
       email_id: info@nqtech.ca
       avm_products: ['AWS-Landing-Zone-Account-Vending-Machine']
   - file_name: parameters/core_accounts/aws-landing-zone-securityhub-enabler.json
