build successful changes

--- a/aws-landing-zone-configuration/add-on/sechub-config-integeration-LZ-AddOn/parameters/aws_baseline/aws-landing-zone-sechub-config-integration.json
+++ b/aws-landing-zone-configuration/add-on/sechub-config-integeration-LZ-AddOn/parameters/aws_baseline/aws-landing-zone-sechub-config-integration.json
@@ -1,14 +1,10 @@
 [
   {
     "ParameterKey": "S3SourceBucket",
-    "ParameterValue": "$[alfred_ssm_/org/member/sharedservice/bucket_name]"
+    "ParameterValue": {{ S3SourceBucket }}
   },
   {
-    "ParameterKey": "AWSSharedS3KeyPrefix",
-    "ParameterValue": "$[alfred_ssm_/org/primary/organization_id]"
-  },
-  {
-    "ParameterKey": "LambdaCodeKey",
-    "ParameterValue": {{ LambdaCodeKey }}
+    "ParameterKey": "LambdaCodeZipFile",
+    "ParameterValue": {{ LambdaCodeZipFile }}
   }
 ]
