--- a/aws-landing-zone-configuration/add-on/sechub-config-integeration-LZ-AddOn/user-input.yaml
+++ b/aws-landing-zone-configuration/add-on/sechub-config-integeration-LZ-AddOn/user-input.yaml
@@ -2,12 +2,10 @@ input_parameters:
   - file_name: add_on_manifest.yaml 
     parameters: 
       core_ou: core 
-      core_account: security 
-      email_id: naeemulhaq@hotmail.ca
+      core_account: primary
+      email_id: info@nqtech.ca
       avm_products: ['AWS-Landing-Zone-Account-Vending-Machine']
   - file_name: parameters/aws_baseline/aws-landing-zone-sechub-config-integration.json
     parameters:
-      OrganizationId: "$[alfred_ssm_/org/primary/organization_id]"
       S3SourceBucket: "$[alfred_ssm_/org/member/sharedservice/bucket_name]"
-      LambdaCodeKey: "sechubconfig-int.zip"
-
+      LambdaCodeZipFile: "sechubconfig-int.zip"
